generator client {
  provider = "prisma-client-js"
  output   = "../generated/prisma"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model User {
  id            String @id @default(uuid())
  name          String
  email         String @unique
  password_hash String
  created_at    DateTime @default(now())

  checkIns      CheckIn[]

  @@map("users")
}

model CheckIn {
  id           String @id @default(uuid())
  is_validated DateTime?
  created_at   DateTime @default(now())

  user_id      String
  user         User @relation(fields: [user_id], references: [id])

  gym_id       String
  gym          Gym @relation(fields: [gym_id], references: [id])

  @@map("check_ins")
}

model Gym {
  id          String @id @default(uuid())
  title       String
  description String?
  phone       String?
  latitude    Decimal
  longitude   Decimal

  checkIns    CheckIn[]

  @@map("gyms")
}

generator dbml {
  provider = "prisma-dbml-generator"
  output   = "./dbml"
}